# 492-Energy-Cybersecurity-Repo

./: .env  .env.example  Makefile  README.md  agentic_ai_thesis_website.jsx  config.yaml  docker-compose.lab.yml  docker-compose.yml  kafka_topics.yaml  pyproject.toml  requirements.txt  schemas.py
app/: cli.py  main.py
app/api/: control_routes.py  ingest_routes.py  replay_routes.py  routes.py  sim_routes.py
app/models/: settings.py  telemetry.py
app/services/: db.py  mqtt.py  policy.py  ray_orchestrator.py
app/sim/: feeder.py
app/utils/: logging.py
config/: zones.yaml
dashboards/: grafana_dashboard.json
data/: auth_events.csv
deploy/mosquitto/: mosquitto.conf
deploy/opa/: data.json  policy.rego
deploy/timescale/: init.sql
docs/: lab_runbook.md  ot_collector_placement.md  service_accounts_and_secrets.md
elastic/: detections.ndjson
email_recording/: db.py  schema_linter.py
email_verification/: agent.py  context.py  rule_engine.py
email_verification/rules/: disposable_domain.py  dmarc_compliance.py  geo_anomaly.py  token_expiry.py  token_reuse.py  velocity.py
ot_collector/: asset_manager.py  ot_collector.py  ot_tracking_agent.py  safety_controls.py
ot_collector/dissectors/: dnp3.py  (+3 more)
playbooks/: high_severity_playbooks.yaml
scenarios/: sample_pv_curtail.json
scripts/: demo.py  privacy_scan.py  replay_auth_csv.py  run_ot_collector.py  run_ot_tracking_consumer.py
sentinel/: analytics_rules.json
splunk/: correlation_savedsearches.conf
sql/: asset_baseline.sql  verification_audit.sql
tests/: test_agent_minimal.py  test_health.py
(+1 files in other folders)
