[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-der-telemetry-sim"
version = "0.1.0"
requires-python = ">=3.10"
description = "Simulation-first OT/DER telemetry ingestion and feeder simulation API"
authors = [{ name = "OT/DER Team" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "httpx>=0.27,<0.28",
    "asyncio-mqtt>=0.16,<0.17",
    "asyncpg>=0.29,<0.30",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
sim = ["pandapower>=2.12,<3.0"]
ray = ["ray[default]>=2.32,<3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
